<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.presentation.BeneficiaryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:background="@drawable/rv_item_view_bg">
    
        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/label_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/tv_designation_label"
            app:layout_constraintTop_toTopOf="@id/tv_name_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_name_label"
            />
        <TextView
            android:id="@+id/tv_dob_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/label_dob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            />
        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/tv_designation_label"
            app:layout_constraintTop_toTopOf="@id/tv_dob_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_dob_label"
            />
        <TextView
            android:id="@+id/tv_ssn_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/label_ssn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dob_label"
            />
        <TextView
            android:id="@+id/tv_ssn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/tv_designation_label"
            app:layout_constraintTop_toTopOf="@id/tv_ssn_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_ssn_label"
            />
        <TextView
            android:id="@+id/tv_phone_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ssn_label"
            />
        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/tv_designation_label"
            app:layout_constraintTop_toTopOf="@id/tv_phone_number_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_phone_number_label"
            />
        <TextView
            android:id="@+id/tv_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/label_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number_label"
            />
    
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/tv_designation_label"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
            app:layout_constraintBottom_toTopOf="@id/tv_benefit_type"
            />
    
        <TextView
            android:id="@+id/tv_benefit_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/label_bene_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            />
        <TextView
            android:id="@+id/tv_benefit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/tv_designation_label"
            app:layout_constraintTop_toTopOf="@id/tv_benefit_type_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_benefit_type_label"
            />
        <TextView
            android:id="@+id/tv_designation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/label_designation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_benefit_type"
            />
        <TextView
            android:id="@+id/tv_designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/tv_designation_label"
            app:layout_constraintTop_toTopOf="@id/tv_designation_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_designation_label"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>