<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:background="@drawable/rv_item_view_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/tv_designation_label"
        app:layout_constraintTop_toTopOf="@id/tv_name_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_label"
        />
    <TextView
        android:id="@+id/tv_benefit_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="italic"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/label_bene_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        />
    <TextView
        android:id="@+id/tv_benefit_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/tv_designation_label"
        app:layout_constraintTop_toTopOf="@id/tv_benefit_type_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_benefit_type_label"
        />
    <TextView
        android:id="@+id/tv_designation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="italic"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/label_designation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_benefit_type"
        />
    <TextView
        android:id="@+id/tv_designation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/tv_designation_label"
        app:layout_constraintTop_toTopOf="@id/tv_designation_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_designation_label"
        />
</androidx.constraintlayout.widget.ConstraintLayout>